--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,8 @@ body{
   }
 
   .container{
-    width: 380px;
-    margin: 0;
+    width: 370px !important;
+    margin: 0 auto;
+    padding: 0%;
   }
 }
